--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,30 @@ header h1{
 li{
     list-style: none;
 }
+footer{
+    width: 98%;
+    height: 150px;
+    background-color: #2b2b2b;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+    margin-top: 700px; /*Dependent on situation*/
+    position: absolute;
+}
+
+.nav-bar{
+    width: 98%;
+}
+
+.buttons{
+    width: 98%;
+    height: 50px;
+    float: left;
+}
+
+.buttons:hover{
+    cursor: pointer;
+}
 
 .top-buttons{
     width: 80%;
@@ -71,4 +95,193 @@ li{
 
 .arrow-button img{
     cursor: pointer;
+}
+
+.col-3-two{
+    width: 23%;
+    height: 300px;
+    background-color: lightpink;
+    text-align: center;
+    margin: 1%;
+    border-radius: 1%;
+    float: left;
+}
+/*Albumb covers with Floating Icons*/
+.overlay{
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: opacity 0.5s;
+}
+
+.overlay:hover{
+    cursor: pointer;
+    opacity: 1;
+}
+
+/*Img Start*/
+.backgroundIMG1{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/blame_it_on_baby_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG2{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/circles_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG3{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/happy_thoughts_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG4{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/kanye_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG5{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/kod_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG6{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/low_end_theory_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG7{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/man_on_the_moon_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG8{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/music_to_be_murdered_by_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG9{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/my_favourite_mix_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG10{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/no_pressure_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG11{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/restoration_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG12{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/revenge_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG13{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/to_pimp_a_butterfly_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.backgroundIMG14{
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/covers/wu_tang_album_cover.png");
+    background-position: center;
+    background-size: cover;
+}
+/*Img end*/
+
+.icon{
+    width: 60px;
+    height: 60px;
+    background-color: red;
+    border-radius: 30px;
+    margin: auto;
+}
+
+.content{
+    width: 100%;
+    height: 80px;
+    background-color: rebeccapurple;
+    margin-top: 160px;
+    color: white;
+}
+
+.col-6{
+    width: 48%;
+    height: 600px;
+    background-color: aquamarine;
+    text-align: center;
+    margin: 1%;
+    float: left; 
+}
+
+.half{
+    height: 370px;
+}
+
+.col-6-three{
+    width: 48%;
+    height: 600px;
+    margin: 1%;
+    float: left; 
+}
+
+.in-color{
+    width: 100%;
+    height: 200px;
+    background-color: #2b2b2b;
+    margin-top: 155px;
+}
+
+.col-6-three h3{
+    text-align: left;
+}
+.col-6-three h1{
+    margin-top: -100px;
+    text-align: left;
+
 }
