--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,44 @@
+#container-fluid{
+    flex: auto;
+    background-color: #2b2b2b;
+}
+
+.container-fluid{
+    background-color: #2b2b2b;
+    color: white;
+}
+
 html{
     margin: 0;
     padding: 0;
+    background-color: #2b2b2b;
+}
+
+h3{
+    font-family: 'Playfair Display', serif;
+}
+
+p{
+    font-family: 'Sedgwick Ave Display', cursive;
 }
 
 nav{
     width: 100%;
     height: 100px;
-    background-color: lightgray;
+    background-color: inherit;
+    background-image: url("/assets/covers/NF/Banner.jpg");
 }
 
 header{
     width: 100%;
     height: 600px;
-    background-color: lightgray;
+    background-image: url("/assets/covers/NF/Banner.jpg");
 }
 
 header h3,h1{
     margin-left: 10%;
     padding-top: 100px;
+    font-family: 'Sedgwick Ave Display', cursive;
 }
 header h1{
     padding-top: 0% !important;
@@ -29,7 +50,7 @@ li{
 footer{
     width: 98%;
     height: 150px;
-    background-color: #2b2b2b;
+    background-color: #5c5959;
     color: white;
     text-align: center;
     padding-top: 50px;
@@ -37,24 +58,51 @@ footer{
     position: absolute;
 }
 
+
+.btn{
+    height: 30px;
+    width: 150px;
+    float: left;
+    margin: 0 auto;
+    padding-top: 30px;
+}
+
+.logo{
+    width: 30%;
+    height: 100px;
+    float: left;
+    margin-left: 50px;
+    padding-top: 30px;
+}
+
+.search{
+    padding-top: 10px;
+    width: 255px;
+    height: auto;
+    float: right;
+    margin-top: 30px;
+    padding-right: 50px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    background-color: inherit;
+    border-radius: 50px;
+    outline: auto;
+    outline-color: #2b2b2b;
+}
+
 .nav-bar{
     width: 98%;
 }
 
-.buttons{
-    width: 98%;
-    height: 50px;
-    float: left;
-}
 
-.buttons:hover{
-    cursor: pointer;
-}
+
+
 
 .top-buttons{
     width: 80%;
     height: 70px;
-    float: left;
+    margin: 0 auto;
+
 }
 
 .inter{
@@ -65,32 +113,40 @@ footer{
 
 .col-6-one{
     width: 45%;
-    height: 390px;
-    background-color: aquamarine;
+    height: 400px;
     text-align: center;
     margin-left: 1%;
     margin-top: -5%;
-    margin-right: -10%;
+    margin-right: -7%;
     margin-left: 1%;
     float: left;
 }
 
 .col-6-two{
+    color: white;
     width: 45%;
     height: 560px;
-    background-color: purple;
-    text-align: center;
+    background-color: #969696;
     margin-left: 1%;
     margin-top: -5%;
     margin-left: 1%;
     float: left;
 }
+.col-6-two p{
+    margin-left: 75px;
+    margin-right: 50px;
+}
+
+
+.col-6-two h3{
+    margin-left: 72px;
+    padding-top: 50px;
+}
 
 .arrow-button{
-    width: 100%;
-    height: auto;
-    margin-left: 40%;
-    margin-top: 50%;
+    width: 30%;
+    height: 50px;
+    float: right;
 }
 
 .arrow-button img{
@@ -100,7 +156,6 @@ footer{
 .col-3-two{
     width: 23%;
     height: 300px;
-    background-color: lightpink;
     text-align: center;
     margin: 1%;
     border-radius: 1%;
@@ -108,10 +163,11 @@ footer{
 }
 /*Albumb covers with Floating Icons*/
 .overlay{
-    height: 100%;
     width: 100%;
-    opacity: 0;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    padding-top: 100px;
+    opacity: 0;
     transition: opacity 0.5s;
 }
 
@@ -124,7 +180,7 @@ footer{
 .backgroundIMG1{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/blame_it_on_baby_album_cover.png");
+    background-image: url("/assets/covers/NF/Chasing.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -132,7 +188,7 @@ footer{
 .backgroundIMG2{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/circles_album_cover.png");
+    background-image: url("/assets/covers/NF/Clouds.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -140,7 +196,7 @@ footer{
 .backgroundIMG3{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/happy_thoughts_album_cover.png");
+    background-image: url("/assets/covers/NF/Hope.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -148,7 +204,7 @@ footer{
 .backgroundIMG4{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/kanye_album_cover.png");
+    background-image: url("/assets/covers/NF/Mansion.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -156,7 +212,7 @@ footer{
 .backgroundIMG5{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/kod_album_cover.png");
+    background-image: url("/assets/covers/NF/NF.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -164,7 +220,7 @@ footer{
 .backgroundIMG6{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/low_end_theory_album_cover.png");
+    background-image: url("/assets/covers/NF/Perception.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -172,7 +228,7 @@ footer{
 .backgroundIMG7{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/man_on_the_moon_album_cover.png");
+    background-image: url("/assets/covers/NF/TheSearch.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -180,7 +236,7 @@ footer{
 .backgroundIMG8{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/music_to_be_murdered_by_album_cover.png");
+    background-image: url("/assets/covers/NF/Therapy_Session.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -188,7 +244,7 @@ footer{
 .backgroundIMG9{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/my_favourite_mix_album_cover.png");
+    background-image: url("/assets/covers/Other/Tattoostogether.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -196,7 +252,7 @@ footer{
 .backgroundIMG10{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/no_pressure_album_cover.png");
+    background-image: url("/assets/covers/Other/SunFlower.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -204,7 +260,7 @@ footer{
 .backgroundIMG11{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/restoration_album_cover.png");
+    background-image: url("/assets/covers/Other/TheDrive.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -212,7 +268,7 @@ footer{
 .backgroundIMG12{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/revenge_album_cover.png");
+    background-image: url("/assets/covers/Other/Sometimes.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -220,7 +276,7 @@ footer{
 .backgroundIMG13{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/to_pimp_a_butterfly_album_cover.png");
+    background-image: url("/assets/covers/Other/Breakupdiarys.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -228,7 +284,7 @@ footer{
 .backgroundIMG14{
     width: 100%;
     height: 100%;
-    background-image: url("/assets/covers/wu_tang_album_cover.png");
+    background-image: url("/assets/covers/Other/F1.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -237,16 +293,18 @@ footer{
 .icon{
     width: 60px;
     height: 60px;
-    background-color: red;
+    background-image: url("/assets/icons/play_icon.svg");
+    background-position: center;
+    background-size: cover;
     border-radius: 30px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .content{
     width: 100%;
-    height: 80px;
+    height: auto;
     background-color: rebeccapurple;
-    margin-top: 160px;
+    margin-top: 75px;
     color: white;
 }
 
@@ -264,16 +322,19 @@ footer{
 }
 
 .col-6-three{
+    color: white;
     width: 48%;
     height: 600px;
     margin: 1%;
-    float: left; 
+    float: left;
+    background-color: #2b2b2b;
+    padding-left: 50px;
+    padding-top: 50px;
 }
 
 .in-color{
     width: 100%;
     height: 200px;
-    background-color: #2b2b2b;
     margin-top: 155px;
 }
 
@@ -283,5 +344,277 @@ footer{
 .col-6-three h1{
     margin-top: -100px;
     text-align: left;
+    float: inline-end;
 
+}
+
+.stream{
+    margin-left: 0px;
+}
+
+.input-el{
+    width: 90%;
+    height: 60px;
+    margin-top: 10px;
+    padding-left: 15px;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    margin-bottom: 50px;
+}
+
+.col-6-input{
+    width: 45%;
+    height: 600px;
+    background-color: #1d1d1d;
+    text-align: center;
+    margin: 1%;
+    float: left; 
+}
+
+.play-btn{
+    width: 200px;
+    height: 80px;
+    float: right;
+    border-radius: 50px;
+    margin-right: 45px;
+    font-size: large;
+    font-weight: bold;
+    color: white;
+}
+
+.search-scope{
+    height: 20px;
+    width: 20px;
+    float: right;
+}
+
+.logo-style{
+    width: auto;
+    height: 50px;
+}
+
+.heart-icon{
+    height: auto;
+    width: 50px;
+    margin-left: 30px;
+}
+
+.top-btn{
+    height: 50px;
+    width: 150px;
+    border-radius: 25px;
+    margin: 10px;
+    color: white;
+    background-color: #2b2b2b;
+    border: 5px;
+}
+
+.top-btn:hover{
+    color: black;
+    background-color: inherit;
+    border: 3px solid #2b2b2b;
+}
+
+.arrow{
+    margin-left: 15px;
+    margin-top: 130px;
+}
+
+.info-about{
+    width: 100%;
+    height: 50px;
+    color: white;
+}
+
+.info-about-1{
+    width: 20%;
+    height: 100%;
+    float: left;
+}
+
+.info-about-2{
+    width: 100%;
+    float: left;
+}
+
+
+.top-btn-p2{
+    float: right;
+    height: 50px;
+    width: 150px;
+    border-radius: 25px;
+    margin: 10px;
+    color: white;
+    background-color: #2b2b2b;
+    border: 5px;
+    margin-right: 50px;
+}
+
+.top-btn-p2:hover{
+    color: black;
+    background-color: inherit;
+    border: 3px solid #2b2b2b;
+}
+
+.row{
+    height: 600px;
+    width: 100%;
+}
+
+.col-6-play1{
+    width: 30%;
+    height: 400px;
+    background-image: url("/assets/covers/Other/my_favourite_mix_album_cover.png");
+    background-position: center;
+    background-size:cover;
+    margin-top: 50px;
+    margin-right: 50px;
+    margin-left: 100px;
+}
+
+.col-6-play2{
+    height: 500px;
+    width: 60%;
+    background-color: #1d1d1d;
+}
+
+.playlist{
+    text-align: center;
+    width: 33.33%;
+    height: 5%;
+    color: white !important;
+}
+
+
+.playlist-2{
+    text-align: center;
+    height: 50px;
+    width: 25%;
+    float: left;
+    color: white !important;
+}
+
+
+.playlist-3{
+    text-align: center;
+    width: 20%;
+    color: white !important;
+}
+
+.line-element{
+    width: 100%;
+    height: 10px;
+    margin-top: 100px;
+}
+
+.line{
+    width: 100%;
+    height: 5px;
+    background-color: lightgray;
+}
+
+.under-line{
+    width: 100%;
+    height: 2px;
+    background-color: lightgray;
+    opacity: 0.5;
+}
+
+
+.under-line-element1{
+    width: 100%;
+    height: 10px;
+}
+
+.under-line-element2{
+    width: 100%;
+    height: 10px;
+}
+
+.under-line-element3{
+    width: 100%;
+    height: 10px;
+}
+
+.under-line-element4{
+    width: 100%;
+    height: 10px;
+}
+
+.under-line-element5{
+    width: 100%;
+    height: 10px;
+}
+
+.under-line-element6{
+    width: 100%;
+    height: 10px;
+}
+
+.boxing{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.line-fill{
+    width: 50%;
+    height: 5px;
+    background-color: white;
+}
+
+.marker{
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border-radius: 20px;
+    margin: 0 auto;
+    margin-top: -12px;
+}
+
+.false-conf{
+    margin-top: 50px;
+    height: 100px;
+    width: 100px;
+    background-image: url("/assets/covers/NF/Falseconfidence.jpg");
+    background-position: center;
+    background-size:cover;
+}
+
+.last-row{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.next-two{
+    float: left;
+    padding-left: 120px;
+    margin-top: -60px;
+}
+.dots{
+    float: right;
+}
+
+.center-buttons1{
+    float: left;
+    margin-left: 50%;
+}
+
+.center-buttons2{
+    margin-bottom: 50px;
+    float: left;
+}
+
+.center-buttons3{
+    float: left;
+}
+
+footer h3{
+    float: left;
+    margin-left: 100px;
+}
+.footer-icon{
+    margin-right: 50px;
+    float: right;
 }
